<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddCar">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textSize="20sp"
    android:textStyle="bold"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:text="@string/Enter_the_car" />


    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/etcompany"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/company"
        android:completionThreshold="1"/>





    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/etmodel"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/car_model"
        android:completionThreshold="1"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/etserial"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/serial"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/etregistr"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/registration_number"
        android:inputType="number"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:id="@+id/et_car_year"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/car_year"
                android:inputType="number"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="17dp"
                android:textStyle="bold"
                android:textColor="@color/textcolor"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:text="@string/Car_type" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="20dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/add_car_car_type"/>


        </LinearLayout>



    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnaddcar"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/add_car"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColor="@color/white"
        android:background="@color/buttons"/>


</RelativeLayout>