<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AddReparation"
    android:paddingTop="16dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">








    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/input_repare_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/date_of_repare"
                android:freezesText="true"
                android:focusableInTouchMode="false"
                android:drawableEnd="@drawable/calander"/>




            <EditText
                android:id="@+id/input_repare_odo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/odometer"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:freezesText="true"/>




            <EditText
                android:id="@+id/input_service_center_repare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/service_center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:focusableInTouchMode="false"
                android:drawableEnd="@drawable/choseservicecenter"/>








            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="17sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/hcolor"
                android:text="@string/Chose_Reparation_Type" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp">

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="false"
                    android:id="@+id/toggle_group_repare_type"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:id="@+id/toggle_engine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/engine"/>
                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:id="@+id/toggle_clim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clim"/>
                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:id="@+id/toggle_suspension"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suspension"/>
                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:id="@+id/toggle_paint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_str"/>

                </com.google.android.material.button.MaterialButtonToggleGroup>


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/hcolor"
                    android:text="Notes:" />

                <EditText
                    android:id="@+id/note_repare"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginBottom="15dp"
                    android:hint="@string/note_hint"/>




            </LinearLayout>






            <Button
                android:id="@+id/btn_add_reparation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/save_reparation"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                style="@style/Widget.MaterialComponents.Button"/>



        </LinearLayout>





    </ScrollView>

</LinearLayout>